@@ -62,6 +62,7 @@ Changes from RapidMiner 5.2.8 to 5.3.0
 * BUGFIX: Fixed possible data loss when trying to store data/processes/etc in the repository using invalid characters for the given
 		  filesystem by now showing an error instead of failing silently
 * BUGFIX: fixed an initialization problem in the Cross Distances operator, which caused wrong calculation of distances in some rare cases
+* BUGFIX: Quickfix Dialogs shouldn't vanish right after showing (RCOMM2012)
  
 
 Changes from RapidMiner 5.2.6 to 5.2.8
